# kiwoo-analysis

./: .gitignore  AGENTS.md  BOARD_REPORT_PLAN.md  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  temp.md  tsconfig.json
.github/workflows/: analysis-workflow-ci.yml
.specify/memory/: constitution.md
config/: .env.example
docs/: README.md  manus-analysis-workflow.md  project-map.md
docs/modules/: agents-and-tools.md  board-and-integrations.md  entrypoints-and-ui.md  llm-and-providers.md  runtime-and-session.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
migrations/versions/: 001_create_analysis_tables.py
scripts/: build.ts  dev-web.ts  smoke-harness.ts
specs/001-manus-analysis-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-report.md
src/: index.ts  main.py  server.ts  types.ts
src/agent/: registry.ts
src/analyzers/: dimension_registry.py
src/api/: dependencies.py
src/app/: plugins.ts  runtime.ts
src/board/: agents.ts  index.ts  prompts.ts  schema.ts  snapshot.ts  tools.ts  types.ts
src/config/: settings.py
src/core/: config.ts  module.ts  types.ts
src/http/: chat.ts  files.ts  openapi.ts  responses.ts  server.ts
src/llm/: content.ts  fake.ts  index.ts  models.ts  qwen.ts  types.ts
src/models/: __init__.py  analysis_job.py  analysis_report.py  board_snapshot.py
src/observability/: metrics.py
src/repositories/: analysis_job_repository.py  analysis_report_repository.py
src/runtime/: bootstrap.ts  logger.ts
(+176 files in other folders)
